[package]
name = "pt_register_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1.60"
lettre = "0.10"
clokwerk = "0.4.0"
log = "0.4"
env_logger = "0.10.0"
ctrlc = { version = "3.0", features = ["termination"] }
